# ml-journey

./: README.md
bert_finetune/: .gitignore  articlesTest_10kGNAD_10perSegment.csv  articlesTrain_10kGNAD_10perSegment.csv  articlesValidate_10kGNAD_10perSegment_noClass.csv  articles_dataset.py  bert_finetune.ipynb  binaryRating_title_test.csv  pipeline_loader.ipynb  pyproject.toml
em-algorithm/: k_means.py  pyproject.toml
jax_training/: .gitignore  breast_cancer_data.py  main.ipynb  model_breast_cancer.py  pyproject.toml  system_monitor.py  tiny_stories_data.py  tiny_stories_hf.py  tiny_stories_model.py  tiny_stories_training.py  training_breast_cancer.py
learn_jax/: main.py  pyproject.toml
linear_regression_from_scratch/: main.ipynb  pyproject.toml
mixture_of_experts_from_scratch/: bank_dataset.csv  moe.ipynb  pyproject.toml
tokenizer_from_scratch/: README.md  main.ipynb  main.py  pyproject.toml  tokenizer.py
transformers_from_scratch/: bank_dataset.py  main.ipynb  pyproject.toml  transformer.ipynb
