[project]
name = "bert-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "jupyter>=1.1.1",
    "polars>=1.31.0",
    "protobuf>=6.31.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers[torch]>=4.53.2",
]
