[project]
name = "mixture-of-experts-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]
